themes/hugo-universal-theme/static/css/custom.css
.box-image-text .image {
  min-height: 190px;
  max-height: 190px;
}

.box-image-text .image img {
  max-height: 190px;
  margin: auto;
}

.box-simple {
  min-height: 230px;
}
:link {
  color: LinkText;
  text-decoration: underline;
  text-decoration-color: color-mix(in srgb, currentColor 25%, transparent);
}
:visited {
  color: VisitedText;
}

